[project]
name = "mini-vllm"
version = "0.1.0"
description = "Your first inference engine — scheduling + KV management layer"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.7",
    "transformers>=4.52",
    "xxhash>=3.5",
    "safetensors>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]
