[project]
name = "mini-vllm"
version = "0.1.0"
description = "Your first inference engine — scheduling + KV management layer"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1,<2.7",
    "transformers>=4.52,<5",
    "xxhash>=3.5",
    "safetensors>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]
